--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,9 +1,11 @@
+[toolchain]
+
 [features]
 resolution = true
 skip-lint = false
 
 [programs.localnet]
-escrow = "33CTmeovXMHmqHb45KiaL73m4jVqVQCbzjCm27TFboZx"
+escrow = "3pRPkw3RvV5LVAynwbx6pnZKgt1e5GvD7q3wQPM7XKSU"
 
 [registry]
 url = "https://api.apr.dev"
@@ -13,4 +15,4 @@ cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
