--- a/package.json
+++ b/package.json
@@ -1,20 +1,45 @@
 {
     "license": "MIT",
     "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.30.0"
+        "@chakra-ui/icons": "^2.1.1",
+        "@chakra-ui/react": "^2.8.1",
+        "@coral-xyz/anchor": "^0.30.0",
+        "@solana/wallet-adapter-base": "^0.9.23",
+        "@solana/wallet-adapter-react": "^0.15.35",
+        "@solana/wallet-adapter-react-ui": "^0.9.35",
+        "@solana/wallet-adapter-wallets": "^0.19.32",
+        "@solana/web3.js": "^1.92.0",
+        "@types/node": "18.11.9",
+        "@types/react": "18.0.25",
+        "@types/react-dom": "18.0.8",
+        "axios": "^1.5.0",
+        "crypto-js": "^4.2.0",
+        "eslint": "8.26.0",
+        "eslint-config-next": "13.0.2",
+        "framer-motion": "^10.16.4",
+        "next": "^12.3.3",
+        "react": "18.2.0",
+        "react-countdown": "^2.3.5",
+        "react-countup": "^6.5.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^4.11.0",
+        "react-player": "^2.13.0",
+        "typescript": "4.8.4"
     },
     "devDependencies": {
-        "chai": "^4.3.4",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^10.0.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
-        "typescript": "^4.3.5",
-        "prettier": "^2.6.2"
+        "chai": "^4.3.4",
+        "mocha": "^9.0.3",
+        "prettier": "^2.6.2",
+        "ts-mocha": "^10.0.0"
     }
 }
