--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
         "react-dom": "18.2.0",
         "react-icons": "^4.11.0",
         "react-player": "^2.13.0",
-        "typescript": "4.8.4"
+        "typescript": "^5.4.5"
     }
 }
