--- a/package.json
+++ b/package.json
@@ -32,5 +32,14 @@
         "react-icons": "^4.11.0",
         "react-player": "^2.13.0",
         "typescript": "^5.4.5"
+    },
+    "devDependencies": {
+        "@types/bn.js": "^5.1.0",
+        "@types/chai": "^4.3.0",
+        "@types/mocha": "^9.0.0",
+        "chai": "^4.3.4",
+        "mocha": "^9.0.3",
+        "prettier": "^2.6.2",
+        "ts-mocha": "^10.0.0"
     }
 }
